controlaula (1.6.11-1) unstable; urgency=low

  * Fix error in thin clients
  * Complete some untranslated strings

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Thu, 17 Mar 2011 10:01:12 +0100

controlaula (1.6.10-1) unstable; urgency=low

  * i18n finished
  * Fixed bug in student javascript
  * debian/control: added dependency on libjs-jquery

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Mon, 07 Mar 2011 14:02:42 +0100

controlaula (1.6.9-1) unstable; urgency=low

  * Fixed bug in Config importation
  * Fixed bug when sending files with spaces in their filenames

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Wed, 02 Mar 2011 12:47:36 +0100

controlaula (1.6.8-1) unstable; urgency=low

  * Improved import of legacy configurations (thanks to Juan Antonio
    Cristin)
  * gnome-screensaver is stopped in the student after a teacher order
  * Improved udp protocol behaviour
  * Improved web browser launching

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Mon, 28 Feb 2011 13:35:14 +0100

controlaula (1.6.7-1) unstable; urgency=low

  * The teacher begin its announces only after first web hit

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Sun, 13 Feb 2011 20:09:05 +0100

controlaula (1.6.6-1) unstable; urgency=low

  * Added more checks to avoid ugly warn or error messages in logs

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Sun, 06 Feb 2011 19:05:58 +0100

controlaula (1.6.5-1) unstable; urgency=low

  * Fix regression introduced in 1.6.4.
  * Improve zombie terminate routine

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Fri, 04 Feb 2011 11:40:56 +0100

controlaula (1.6.4-1) unstable; urgency=low

  * Avoid keeping monitor as a zombie app.
  * Take into account if the number of hosts is greater than cols*rows

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Thu, 03 Feb 2011 20:23:14 +0100

controlaula (1.6.3-1) unstable; urgency=low

  * Importing legacy configurations work even if legacy conf is wrong
